--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
      <link rel="stylesheet" href="main.css">
      <link rel="stylesheet" href="responsive.css">
+    
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Muli|Raleway&display=swap" rel="stylesheet">
 </head>
@@ -28,16 +29,22 @@
 <!-- <div id="load "class="lds-heart"><div></div> -->
   
 
+   <div class="loader_bg">
+    <div class="loader"></div>
+   </div> 
 <div id="body" class="container-fluid">
 
 
             <div class="row text-center">
 
 
-                <div class="col-top col-sm-12"><img class="tapis-logo"src="tapis-whiteshadow.png">
+                <div class="col-top col-sm-12">
 
-                  <h1><span class="">10.99</span> Affordable Trendy Shoewear</h1>
-                  <h3>Coming Soon</h3>
+
+                  <img class="animated fadeIn tapis-logo"src="tapis-whiteshadow.png">
+
+                  <h1 class="animated fadeIn"><span class="">10.99</span> Affordable Trendy Shoewear</h1>
+                  <h3 class="animated fadeIn delay-6s">Coming Soon</h3>
 
                      </div>
 
@@ -49,10 +56,10 @@
                      <div class="col-sm-4"></div>
 <div class="col-sm-4">
 
-<p class="subscribe"><span class="red">Subscribe</span> below to receive VIP deals and updates! </p>
+<p class="subscribe animated fadeIn"><span class="red">Subscribe</span> below to receive VIP deals and updates! </p>
 
 <form id="contactForm">
-    <div class="input-group">
+    <div class="input-group animated fadeIn">
 
       <input type="email" class="form-control" id="email" required placeholder="Email">
       <!-- <div class="input-group-btn"> -->
@@ -65,9 +72,10 @@
 </div>
 
 
-<div class="col-sm-4 col-bottom"></div>
 
-<div class="col-sm-12">
+
+<div class="col-sm-12 animated fadeIn social">
+
 <a target="_blank" href="https://www.instagram.com/swervus.co/"><i class="fab fa-instagram"></i></a>
 
 <a target="_blank" href="https://www.twitter.com/swerv27385523"><i class="fab fa-twitter"></i></a>
@@ -76,7 +84,7 @@
 </div>
 
 <div class="col-sm-12">
-  <h3 class="contact">For Questions Contact Us At <br> info@tapisrogueshoes.com</h3>
+  <h3 class="contact animated fadeIn ">For Questions Contact Us At <br> info@tapisrogueshoes.com</h3>
 </div>
 <!-- 
 <div class="col-sm-8"></div> -->
@@ -93,9 +101,6 @@
 </div>
 
 
-   <div class="loader_bg">
-    <div class="loader"></div>
-   </div> 
 
                 
             </div>
