--- a/index2.html
+++ b/index2.html
@@ -11,8 +11,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-     <link rel="stylesheet" href="main.css">
-     <link rel="stylesheet" href="responsive.css">
+     <link rel="stylesheet" href="main2.css">
+     <link rel="stylesheet" href="responsive2.css">
     
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Muli|Raleway&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
                 <div class="col-top col-sm-12">
 
 
-                  <img class="animated fadeIn tapis-logo"src="tapis-whiteshadow.png">
+                  <img class="animated fadeIn tapis-logo"src="tapis-rogue.png">
 
                   <h1 class="animated fadeIn"><span class="">10.99</span> Affordable Trendy Shoewear</h1>
                   <h3 class="animated fadeIn delay-6s">Coming Soon</h3>
@@ -118,7 +118,7 @@
 </div></div> -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 
-    <!--     <script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script> -->
+      <!--   <script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script> -->
 <script src="main.js"></script>
 
 
