--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 
 <div class="col-sm-12">
-  <h3 class="contact animated fadeIn ">For Questions Contact Us At <br> info@tapisrogueshoes.com</h3>
+  <h3 class="contact animated fadeIn ">For Questions Contact Us At <br> <a href="mailto:info@tapisrogueshoes.com">info@tapisrogueshoes.com</h3></a>
 </div>
 <!-- 
 <div class="col-sm-8"></div> -->
