--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tapis Rogue Shoes</title>
-	<meta charset="utf-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1">
-	 <link rel="icon" href="logo.png" type="image/png" sizes="16x16">
+  <title>Tapis Rogue Shoes</title>
+  <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="icon" href="logo.png" type="image/png" sizes="16x16">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
      <link rel="stylesheet" href="main.css">
      <link rel="stylesheet" href="responsive.css">
     
@@ -56,18 +56,8 @@
                      <div class="col-sm-4"></div>
 <div class="col-sm-4">
 
-<p class="subscribe animated fadeIn"><span class="red">Subscribe</span> below to receive VIP deals and updates! </p>
 
-<form id="contactForm">
-    <div class="input-group animated fadeIn">
 
-      <input type="email" class="form-control" id="email" required placeholder="Email">
-      <!-- <div class="input-group-btn"> -->
-        <button type="submit" class="btn btn-dark form-submit">Subscribe</button>
-       </div>
-     
-      <!-- </div> -->
-    </form>
    
 </div>
 
@@ -75,12 +65,27 @@
 
 
 <div class="col-sm-12 animated fadeIn social">
+  <p class="subscribe animated fadeIn"><span class="red">Subscribe</span> below to receive VIP deals and updates! </p>
+<!-- Begin Mailchimp Signup Form -->
 
-<a target="_blank" href="#"><i class="fab fa-instagram"></i></a>
 
-<a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
+<div id="mc_embed_signup">
+<form action="https://tapisrogueshoes.us3.list-manage.com/subscribe/post?u=e1902209da310da3444a1b037&amp;id=c517c01bf9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  
+  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e1902209da310da3444a1b037_c517c01bf9" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
 
-    <a target="_blank" href="#"><i class="fab fa-facebook"></i></a>
+<!--End mc_embed_signup-->
+<span class="social-span animated fadeIn">
+<a target="_blank" href="https://www.instagram.com/tapisrogueshoes/" target="_blank"><i class="fab fa-instagram"></i></a>
+
+    <a target="_blank" href="https://www.facebook.com/TapisRogueShoes/" target="_blank"><i class="fab fa-facebook"></i></a></span>
 </div>
 
 <div class="col-sm-12">
