--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
         </div>
      
 
-<!-- <div class="container-fluid">
-<div class="panel-footer row text-center">
+<div class="container-fluid">
+<div class="panel-footer animated fadeIn row text-center">
  
 <div class="col-sm-12">
   <p class="foot-text">&copy; 2019
-      <b>Tapis Rogue Shoes</b>  Modernly Designed by <a href="https://taylorhagans.com" target="_blank">Taylor Hagans</a><img src="taylor_logo-crop.png"width="30" height="30"> </p>
+      <b>Tapis Rogue Shoes</b>  <span><br><b>Modernly Designed</b> by <a href="https://modernlydesigned.com" target="_blank">Taylor Hagans</a><img src="taylor_logo-crop.png"width="30" height="30"> </span></p>
 </div> 
-</div></div> -->
+</div></div>
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 
     <!--     <script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script> -->
